--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "5.1.0",
   "private": true,
   "author": {
-    "name": "Safdar Jamal",
-    "url": "https://safdarjamal.github.io"
+    "name": "Om Agarwal",
+    "url": "https://OmAgarwal8979.github.io"
   },
-  "homepage": "https://safdarjamal.github.io/quiz-app/",
+  "homepage": "https://OmAgarwal8979.github.io/Onlint-Quiz-Trivia/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
